한->영(주관식)에서 자동완성 기능
.영어 단어를 자동완성해서 추천하는 기능을 코드에서 명시적으로 제거

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ body.fullscreen-mode{overscroll-behavior-y:contain}
     <div class="quiz-answer-reveal" id="quizAnswerReveal"></div>
     <div class="quiz-choices" id="quizChoices"></div>
     <div class="quiz-input-wrap" id="quizInputWrap" style="display:none">
-      <input class="quiz-input" id="quizInput" type="text" placeholder="">
+      <input class="quiz-input" id="quizInput" type="text" placeholder="" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
     </div>
     <button class="quiz-submit-btn" id="quizSubmitBtn" onclick="submitWriteAnswer()" style="display:none">확인</button>
   </div>
