--- a/index.html
+++ b/index.html
@@ -1191,7 +1191,6 @@ function toggleAcc(header) {
   const card = header.closest('.card-extras');
   card.querySelectorAll('.acc-body.open').forEach(b => { b.classList.remove('open'); b.previousElementSibling.classList.remove('open'); });
   if (!isOpen) { body.classList.add('open'); header.classList.add('open'); }
-  updateCardHeight();
 }
 
 function switchExtrasTab(idx) {
@@ -1212,6 +1211,12 @@ function updateCardHeight() {
     }
   });
 }
+
+// ResizeObserver: 카드 뒷면 크기 변화 자동 감지
+const cardBackObserver = new ResizeObserver(() => {
+  if (isFlipped) updateCardHeight();
+});
+cardBackObserver.observe(document.getElementById('cardBack'));
 
 function showCard() {
   const word = studyWords[currentIndex]; if (!word) return;
