--- a/index_.html
+++ b/index_.html
@@ -90,8 +90,9 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .card-flip-inner.flipped .card-front{pointer-events:none}
 .card-flip-inner.flipped .card-back{pointer-events:auto}
 .card-front,.card-back{width:100%;min-height:340px;backface-visibility:hidden;-webkit-backface-visibility:hidden;border-radius:var(--card-radius);padding:60px 28px 32px;border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow);background:linear-gradient(145deg,#ffffff,#f0f3f8);display:flex;flex-direction:column;align-items:center;justify-content:flex-start;position:relative}
-.card-back{position:absolute;top:0;left:0;transform:rotateY(180deg);background:linear-gradient(145deg,#f0f3f8,#ffffff)}
-.card-mode-hint{position:absolute;bottom:12px;font-size:.7rem;color:var(--text-dim);opacity:.5}
+.card-back{position:absolute;top:0;left:0;transform:rotateY(180deg);background:linear-gradient(145deg,#f0f3f8,#ffffff);padding-bottom:40px;overflow-y:auto}
+.card-mode-hint{font-size:.7rem;color:var(--text-dim);opacity:.5;text-align:center;margin-top:12px}
+.card-front .card-mode-hint{position:absolute;bottom:12px;margin-top:0}
 .card-etymology{width:100%;margin-top:16px;text-align:center}
 .card-etymology .ety-parts{display:flex;justify-content:center;flex-wrap:wrap;gap:6px;margin-bottom:12px}
 .card-etymology .ety-part{display:flex;flex-direction:column;align-items:center;padding:8px 12px;border-radius:10px;background:rgba(91,106,191,.06);border:1px solid rgba(91,106,191,.15)}
@@ -99,6 +100,44 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .card-etymology .ety-part .part-mean{font-size:.7rem;color:var(--text-dim);margin-top:2px}
 .card-etymology .ety-plus{display:flex;align-items:center;color:var(--text-dim);font-size:1rem;font-weight:700;padding:0 2px}
 .card-etymology .ety-origin{font-size:.82rem;color:var(--text);line-height:1.5;padding:10px 14px;border-radius:10px;background:rgba(46,170,127,.05);border:1px solid rgba(46,170,127,.12)}
+
+/* ── Card Extras (예문, 파생어, 동의어, 숙어) ── */
+.card-extras{width:100%;margin-top:16px;text-align:left}
+.extras-divider{height:1px;background:rgba(0,0,0,.06);margin:14px 0}
+.extras-section-title{font-size:.75rem;font-weight:700;color:var(--text-dim);margin-bottom:8px;display:flex;align-items:center;gap:6px}
+.example-item{margin-bottom:10px;padding:10px 14px;border-radius:10px;background:rgba(91,106,191,.04);border:1px solid rgba(91,106,191,.08)}
+.example-item:last-child{margin-bottom:0}
+.example-en{font-size:.83rem;color:var(--text);line-height:1.5;margin-bottom:3px}
+.example-en b{color:var(--accent);font-weight:700}
+.example-ko{font-size:.76rem;color:var(--text-dim);line-height:1.4}
+.example-source{display:inline-block;font-size:.58rem;padding:2px 6px;border-radius:4px;background:var(--red);color:#fff;font-weight:600;margin-left:4px;vertical-align:middle}
+.deriv-item{display:flex;align-items:baseline;gap:8px;margin-bottom:5px;font-size:.82rem}
+.deriv-word{font-family:'DM Serif Display',serif;font-weight:600;color:var(--accent);min-width:85px}
+.deriv-pos{font-size:.62rem;font-weight:700;color:#fff;background:var(--accent);padding:2px 7px;border-radius:10px;flex-shrink:0}
+.deriv-def{color:var(--text)}
+.syn-ant-row{display:flex;gap:8px;flex-wrap:wrap}
+.syn-tag,.ant-tag{font-size:.78rem;padding:5px 11px;border-radius:8px}
+.syn-tag{background:rgba(46,170,127,.08);border:1px solid rgba(46,170,127,.2);color:var(--green)}
+.ant-tag{background:rgba(217,83,79,.08);border:1px solid rgba(217,83,79,.2);color:var(--red)}
+.syn-label,.ant-label{font-size:.58rem;font-weight:700;margin-right:2px}
+.phrase-item{font-size:.82rem;margin-bottom:4px;color:var(--text)}
+.phrase-en{font-weight:600;color:var(--accent)}
+
+/* 아코디언 */
+.acc-section{border:1px solid rgba(0,0,0,.06);border-radius:12px;margin-bottom:8px;overflow:hidden}
+.acc-header{display:flex;align-items:center;justify-content:space-between;padding:11px 14px;cursor:pointer;background:var(--surface);transition:background .2s;font-size:.82rem;font-weight:600;color:var(--text);border:none;width:100%;text-align:left;font-family:'Noto Sans KR',sans-serif}
+.acc-header:hover{background:var(--surface2)}
+.acc-header .acc-icon{font-size:.7rem;transition:transform .3s;color:var(--text-dim)}
+.acc-header.open .acc-icon{transform:rotate(180deg)}
+.acc-body{max-height:0;overflow:hidden;transition:max-height .35s ease,padding .35s ease;padding:0 14px;background:var(--surface)}
+.acc-body.open{max-height:600px;padding:12px 14px}
+
+/* 탭 */
+.extras-tab-bar{display:flex;gap:4px;margin-bottom:14px;padding:4px;background:var(--surface2);border-radius:12px}
+.extras-tab-btn{flex:1;padding:9px 4px;border:none;border-radius:10px;font-family:'Noto Sans KR',sans-serif;font-size:.75rem;font-weight:600;cursor:pointer;color:var(--text-dim);background:transparent;transition:all .2s}
+.extras-tab-btn.active{background:var(--surface);color:var(--accent);box-shadow:0 1px 4px rgba(0,0,0,.08)}
+.extras-tab-content{display:none}
+.extras-tab-content.active{display:block}
 .card-word{font-family:'DM Serif Display',serif;font-size:2.6rem;letter-spacing:1px;text-align:center;margin-bottom:6px}
 .card-ipa{font-size:.95rem;color:var(--text-dim);text-align:center;margin-bottom:20px;font-family:'Noto Sans',sans-serif}
 .card-meanings{width:100%}
@@ -247,6 +286,14 @@ body.fullscreen-mode{overscroll-behavior-y:contain}
         <option value="0.7">0.7x</option>
       </select>
     </div>
+    <div class="setting-row">
+      <div class="setting-label">카드 뒷면 레이아웃<span>추가 정보 표시 방식</span></div>
+      <select class="setting-select" id="cardLayout">
+        <option value="scroll" selected>모두 펼치기</option>
+        <option value="accordion">접이식</option>
+        <option value="tab">탭 전환</option>
+      </select>
+    </div>
     <button class="btn-reload" onclick="toggleFullscreen()" id="btnFullscreen">🖥️ 전체화면 모드</button>
     <div style="font-size:.7rem;color:var(--text-dim);text-align:center;margin-top:4px">※ iOS(아이폰/아이패드)에서는 지원되지 않습니다</div>
     <button class="btn-reload" onclick="changeBook()">📚 교재 변경</button>
@@ -313,6 +360,7 @@ body.fullscreen-mode{overscroll-behavior-y:contain}
             <div class="card-ipa" id="cardIpaBack"></div>
             <div class="card-meanings" id="cardMeaningsBack"></div>
             <div class="card-etymology" id="cardEtymology"></div>
+            <div class="card-extras" id="cardExtras"></div>
             <div class="card-mode-hint" id="backHint"></div>
           </div>
         </div>
@@ -574,14 +622,20 @@ function updateModeButtons() {
 function flipCard(e) {
   // 버튼 클릭 시 뒤집기 방지
   if (e && e.target.closest('.card-btn')) return;
-  // 전체 모드에서 parts 데이터 없으면 뒤집기 안 함
+  if (e && e.target.closest('.card-extras')) return;
+  // 전체 모드에서 parts/extras 데이터 없으면 뒤집기 안 함
   if (viewMode === 'all') {
     const word = studyWords[currentIndex];
-    if (!word || !word.parts || word.parts.length === 0) return;
+    if (!word || ((!word.parts || word.parts.length === 0) && !hasExtras(word))) return;
   }
   playSound('flip');
   isFlipped = !isFlipped;
   document.getElementById('cardFlipInner').classList.toggle('flipped', isFlipped);
+  if (isFlipped) {
+    updateCardHeight();
+  } else {
+    document.getElementById('cardFlipInner').style.minHeight = '';
+  }
 }
 
 function resetFlip() {
@@ -636,6 +690,7 @@ if (typeof speechSynthesis !== 'undefined') {
 function saveSettings() {
   localStorage.setItem('engvoca_wordOrder', document.getElementById('wordOrder').value);
   localStorage.setItem('engvoca_slowSpeed', document.getElementById('slowSpeed').value);
+  localStorage.setItem('engvoca_cardLayout', document.getElementById('cardLayout').value);
   const vIdx = parseInt(document.getElementById('voiceSelect').value);
   if (vIdx >= 0 && voices[vIdx]) {
     localStorage.setItem('engvoca_voice', voices[vIdx].name);
@@ -648,6 +703,8 @@ function restoreSettings() {
   if (savedOrder) document.getElementById('wordOrder').value = savedOrder;
   const savedSpeed = localStorage.getItem('engvoca_slowSpeed');
   if (savedSpeed) document.getElementById('slowSpeed').value = savedSpeed;
+  const savedLayout = localStorage.getItem('engvoca_cardLayout');
+  if (savedLayout) document.getElementById('cardLayout').value = savedLayout;
   // 음성은 loadVoices에서 복원
 }
 restoreSettings();
@@ -1016,10 +1073,151 @@ function shuffle(arr) {
   return a;
 }
 
+// ── 카드 뒷면 추가 정보 렌더링 ──
+function getCardLayout() {
+  return document.getElementById('cardLayout').value || 'scroll';
+}
+
+function hasExtras(word) {
+  return (word.examples && word.examples.length > 0) ||
+         (word.derivatives && word.derivatives.length > 0) ||
+         (word.synonyms && word.synonyms.length > 0) ||
+         (word.antonyms && word.antonyms.length > 0) ||
+         (word.phrases && word.phrases.length > 0);
+}
+
+function buildExamplesHtml(word) {
+  if (!word.examples || word.examples.length === 0) return '';
+  const derivWords = word.derivatives ? word.derivatives.map(d => d.en) : [];
+  derivWords.sort((a, b) => b.length - a.length);
+  const patterns = [];
+  if (derivWords.length > 0) patterns.push('\\b(' + derivWords.join('|') + ')\\b');
+  patterns.push('\\b(' + word.en + '\\w*)\\b');
+  const pattern = new RegExp(patterns.join('|'), 'gi');
+  let h = '';
+  word.examples.forEach(ex => {
+    const enText = ex.en.replace(pattern, '<b>$&</b>');
+    h += '<div class="example-item">';
+    h += `<div class="example-en">${enText}</div>`;
+    h += `<div class="example-ko">${ex.ko}`;
+    if (ex.source) h += ` <span class="example-source">${ex.source}</span>`;
+    h += '</div></div>';
+  });
+  return h;
+}
+
+function buildDerivativesHtml(word) {
+  if (!word.derivatives || word.derivatives.length === 0) return '';
+  let h = '';
+  word.derivatives.forEach(d => {
+    h += `<div class="deriv-item"><span class="deriv-word">${d.en}</span><span class="deriv-pos">${d.pos}</span><span class="deriv-def">${d.defs.join(', ')}</span></div>`;
+  });
+  return h;
+}
+
+function buildSynAntHtml(word) {
+  if ((!word.synonyms || word.synonyms.length === 0) && (!word.antonyms || word.antonyms.length === 0)) return '';
+  let h = '<div class="syn-ant-row">';
+  if (word.synonyms) word.synonyms.forEach(s => { h += `<span class="syn-tag"><span class="syn-label">≒</span> ${s}</span>`; });
+  if (word.antonyms) word.antonyms.forEach(a => { h += `<span class="ant-tag"><span class="ant-label">↔</span> ${a}</span>`; });
+  h += '</div>';
+  return h;
+}
+
+function buildPhrasesHtml(word) {
+  if (!word.phrases || word.phrases.length === 0) return '';
+  let h = '';
+  word.phrases.forEach(p => {
+    h += `<div class="phrase-item"><span class="phrase-en">${p.en}</span> ${p.ko}</div>`;
+  });
+  return h;
+}
+
+function renderExtras(word) {
+  const el = document.getElementById('cardExtras');
+  if (!hasExtras(word)) { el.innerHTML = ''; return; }
+
+  const layout = getCardLayout();
+  const exHtml = buildExamplesHtml(word);
+  const derivHtml = buildDerivativesHtml(word);
+  const synHtml = buildSynAntHtml(word);
+  const phraseHtml = buildPhrasesHtml(word);
+
+  // 표시할 섹션 목록
+  const sections = [];
+  if (exHtml) sections.push({ icon: '📝', title: '예문', html: exHtml });
+  if (derivHtml) sections.push({ icon: '🔄', title: '파생어', html: derivHtml });
+  if (phraseHtml) sections.push({ icon: '📌', title: '숙어 / 표현', html: phraseHtml });
+  if (synHtml) sections.push({ icon: '↔', title: '동의어 / 반의어', html: synHtml });
+
+  if (sections.length === 0) { el.innerHTML = ''; return; }
+
+  let html = '<div class="extras-divider"></div>';
+
+  if (layout === 'scroll') {
+    sections.forEach((sec, i) => {
+      if (i > 0) html += '<div class="extras-divider"></div>';
+      html += `<div class="extras-section-title">${sec.icon} ${sec.title}</div>${sec.html}`;
+    });
+  } else if (layout === 'accordion') {
+    sections.forEach((sec, i) => {
+      html += `<div class="acc-section"><button class="acc-header" onclick="toggleAcc(this)">${sec.icon} ${sec.title} <span class="acc-icon">▼</span></button><div class="acc-body">${sec.html}</div></div>`;
+    });
+  } else if (layout === 'tab') {
+    // 예문은 항상 바로 표시
+    if (exHtml) {
+      html += `<div class="extras-section-title">📝 예문</div>${exHtml}`;
+    }
+    const tabSections = sections.filter(s => s.title !== '예문');
+    if (tabSections.length > 0) {
+      html += '<div class="extras-divider"></div>';
+      html += '<div class="extras-tab-bar">';
+      tabSections.forEach((sec, i) => {
+        html += `<button class="extras-tab-btn${i === 0 ? ' active' : ''}" onclick="switchExtrasTab(${i})">${sec.icon} ${sec.title}</button>`;
+      });
+      html += '</div>';
+      tabSections.forEach((sec, i) => {
+        html += `<div class="extras-tab-content${i === 0 ? ' active' : ''}" data-tab-idx="${i}">${sec.html}</div>`;
+      });
+    }
+  }
+
+  el.innerHTML = html;
+}
+
+function toggleAcc(header) {
+  const body = header.nextElementSibling;
+  const isOpen = body.classList.contains('open');
+  const card = header.closest('.card-extras');
+  card.querySelectorAll('.acc-body.open').forEach(b => { b.classList.remove('open'); b.previousElementSibling.classList.remove('open'); });
+  if (!isOpen) { body.classList.add('open'); header.classList.add('open'); }
+  updateCardHeight();
+}
+
+function switchExtrasTab(idx) {
+  document.querySelectorAll('.extras-tab-btn').forEach((btn, i) => { btn.classList.toggle('active', i === idx); });
+  document.querySelectorAll('.extras-tab-content').forEach(el => { el.classList.toggle('active', parseInt(el.dataset.tabIdx) === idx); });
+  updateCardHeight();
+}
+
+function updateCardHeight() {
+  requestAnimationFrame(() => {
+    const inner = document.getElementById('cardFlipInner');
+    const back = document.getElementById('cardBack');
+    const front = document.getElementById('cardFront');
+    if (isFlipped) {
+      inner.style.minHeight = back.scrollHeight + 'px';
+    } else {
+      inner.style.minHeight = '';
+    }
+  });
+}
+
 function showCard() {
   const word = studyWords[currentIndex]; if (!word) return;
   speakCount = 0;
   resetFlip();
+  document.getElementById('cardFlipInner').style.minHeight = '';
 
   // 별표 상태
   const starred = isStarred(word.en);
@@ -1064,10 +1262,17 @@ function showCard() {
       document.getElementById('cardFlipWrapper').style.cursor = 'pointer';
     } else {
       etyEl.innerHTML = '';
-      document.getElementById('frontHint').textContent = '';
-      document.getElementById('backHint').textContent = '';
-      document.getElementById('cardFlipWrapper').style.cursor = 'default';
+      if (hasExtras(word)) {
+        document.getElementById('frontHint').textContent = '탭하여 상세 보기';
+        document.getElementById('backHint').textContent = '탭하여 돌아가기';
+        document.getElementById('cardFlipWrapper').style.cursor = 'pointer';
+      } else {
+        document.getElementById('frontHint').textContent = '';
+        document.getElementById('backHint').textContent = '';
+        document.getElementById('cardFlipWrapper').style.cursor = 'default';
+      }
     }
+    renderExtras(word);
   } else if (viewMode === 'en') {
     // 영어보기: 앞면=영어+IPA, 뒷면=뜻
     document.getElementById('cardWord').textContent = word.en;
@@ -1078,6 +1283,7 @@ function showCard() {
     document.getElementById('cardIpaBack').textContent = '';
     document.getElementById('cardMeaningsBack').innerHTML = meaningsHtml;
     document.getElementById('cardEtymology').innerHTML = '';
+    document.getElementById('cardExtras').innerHTML = '';
     document.getElementById('backHint').textContent = '탭하여 돌아가기';
     document.getElementById('cardFlipWrapper').style.cursor = 'pointer';
     document.getElementById('btnSpeak').style.visibility = 'visible';
@@ -1091,6 +1297,7 @@ function showCard() {
     document.getElementById('cardIpaBack').textContent = word.ipa || '';
     document.getElementById('cardMeaningsBack').innerHTML = '';
     document.getElementById('cardEtymology').innerHTML = '';
+    document.getElementById('cardExtras').innerHTML = '';
     document.getElementById('backHint').textContent = '탭하여 돌아가기';
     document.getElementById('cardFlipWrapper').style.cursor = 'pointer';
     document.getElementById('btnSpeak').style.visibility = 'hidden';
@@ -1594,6 +1801,7 @@ document.getElementById('settingsPanel').addEventListener('click', function(e) {
 document.getElementById('wordOrder').addEventListener('change', function() { playSound('mode'); saveSettings(); });
 document.getElementById('voiceSelect').addEventListener('change', function() { playSound('mode'); saveSettings(); });
 document.getElementById('slowSpeed').addEventListener('change', function() { playSound('mode'); saveSettings(); });
+document.getElementById('cardLayout').addEventListener('change', function() { playSound('mode'); saveSettings(); if (document.getElementById('studyScreen').style.display !== 'none') showCard(); });
 
 document.addEventListener('keydown', function(e) {
   if (document.getElementById('settingsPanel').classList.contains('open')) return;
